--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
  display: flex;
  flex-direction: column;
  border: 10px solid;
- width: 170px;
+ width: 218px;
 }
 
 .th, .operators{
@@ -23,7 +23,31 @@ text-align: center;
 
 .screen{
     background-color: grey;
-    width: 170px;
+    font-size: x-large;
+    font-weight: bolder;
     height:50px;
     border-bottom: 10px solid black;
 }
+
+.num.de{
+    padding-top: 20px;
+    height: 46px;   
+    font-size:20px;
+    padding-left: 5px;   
+    border: 2px solid black;
+}
+
+    .the{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    }
+    .num.dot {
+            height: 60px;
+            
+        border: 2px solid black;
+        padding-left: 8px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+      
+    };
